alignment fix

--- a/Lesson11/css/weather_site-11.css
+++ b/Lesson11/css/weather_site-11.css
@@ -366,15 +366,19 @@ form p {
     margin: 0.5em;
  }
 
-
+ main #image6 {
+    margin-top: -0.70em;
+}
 
 .data {
     color: white;
     padding: 1em;
 }
+
 h3:nth-of-type(3) {
     padding: 0em;
 }
+
 .towns a:hover {
     background-color: #2893ea;
 }
